tests/algorithms/x/Pascal/machine_learning/lstm/lstm_prediction.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/machine_learning/lstm/lstm_prediction.pas
lstm_prediction.pas(349,23) Error: Incompatible types: got "RealArray" expected "{Dynamic} Array Of LongInt"
lstm_prediction.pas(350,62) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of {Dynamic} Array Of LongInt" expected "{Dynamic} Array Of RealArray"
lstm_prediction.pas(350,45) Error: Incompatible types: got "{Dynamic} Array Of LongInt" expected "RealArray"
lstm_prediction.pas(415) Fatal: There were 3 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
